# old-docs.wasmer.io

./: .gitignore  LICENSE  README.md  SUMMARY.md
.github/workflows/: rust.yml
c/exit-early/: CMakeLists.txt  exit-early.c
c/handling-errors/: CMakeLists.txt  handling-errors.c
c/hello-world/: CMakeLists.txt  hello-world.c
c/hello-world/example-wasienv-wasm/add-one/: add-one  add-one.c  add-one.wasm  build.sh
c/host-functions/: .gitignore  host-functions.c
c/passing-data/: CMakeLists.txt  README.md  passing-data.c
c/passing-data/example-wasienv-wasm/add-one/: add-one.wasm
c/passing-data/example-wasienv-wasm/strings-wasm-is-cool/: README.md  strings-wasm-is-cool.c  strings-wasm-is-cool.wasm
community/: built-with-wasmer.md
docs/: introduction.md
docs/io-devices/: io-devices.md
docs/io-devices/io-devices-lib/: io-devices-lib-assemblyscript.md  io-devices-lib-rust.md  io-devices-lib.md
docs/runtime/: runtime.md
docs/runtime/c-integration/: installation.md  reference-api.md
docs/runtime/cli/: getting-started.md  (+3 more)
docs/runtime/rust-integration/: Cargo.toml  Makefile  README.md  installation.md  reference-api.md
docs/runtime/rust-integration/docs/: early-exit.md  handling-errors.md  hello-world.md  host-functions.md  passing-data.md  prepare-wasm.md
docs/runtime/rust-integration/examples/: early_exit.rs  handling_errors.rs  hello_world.rs  host_functions.rs  passing_data.rs
docs/runtime/rust-integration/examples/early-exit/: early-exit.md
docs/runtime/rust-integration/examples/exit-early/: exit-early.md
docs/runtime/rust-integration/examples/exit-early/example-rust-wasm-crate/early-exit-import/: Cargo.toml
docs/runtime/rust-integration/examples/exit-early/src/: main.rs
docs/runtime/rust-integration/examples/handling-errors/: handling-errors.md
docs/runtime/rust-integration/examples/handling-errors/example-rust-wasm-crate/throw-wasm-error/: Cargo.toml
docs/runtime/rust-integration/examples/hello-world/: Cargo.toml  hello-world.md
docs/runtime/rust-integration/examples/hello-world/src/: main.rs
docs/runtime/rust-integration/examples/host-functions/: Cargo.toml  host-functions.md
docs/runtime/rust-integration/examples/host-functions/example-rust-wasm-crate/host-counter/: Cargo.toml
docs/runtime/rust-integration/examples/host-functions/example-rust-wasm-crate/host-counter/src/: lib.rs
docs/runtime/rust-integration/examples/host-functions/src/: main.rs
docs/runtime/rust-integration/examples/passing-data/: passing-data.md
docs/runtime/rust-integration/wasm/early-exit-guest/: Cargo.toml
docs/runtime/rust-integration/wasm/early-exit-guest/src/: lib.rs
docs/runtime/rust-integration/wasm/handling-errors-guest/: Cargo.toml
docs/runtime/rust-integration/wasm/handling-errors-guest/src/: lib.rs
docs/runtime/rust-integration/wasm/hello-world-guest/: Cargo.toml
docs/runtime/rust-integration/wasm/hello-world-guest/src/: lib.rs
docs/runtime/rust-integration/wasm/host-functions-guest/: Cargo.toml
docs/runtime/rust-integration/wasm/host-functions-guest/src/: lib.rs
docs/runtime/rust-integration/wasm/passing-data-guest/: Cargo.toml
docs/runtime/rust-integration/wasm/passing-data-guest/src/: lib.rs
docs/wapm/: cli.md  getting-started.md  installation.md  manifest.md  reference-api.md  wapm.md
docs/wasmer-js/: module-transformation.md  wasmer-js.md
early-exit/: Cargo.toml
early-exit/src/: main.rs
ecosystem/: webassembly.sh.md
ecosystem/cli/: getting-started.md  usage.md  wasmer-features.md
ecosystem/wapm/: README.md  cli.md  getting-started.md  graphql-api.md  installation.md  manifest.md  publishing-your-package.md  wax.md
ecosystem/wapm 2/: getting-started.md  graphql-api.md  installation.md  manifest.md
ecosystem/wapm-2/: README.md  cli.md  getting-started.md  publishing-your-package.md  wax.md
ecosystem/wasienv/: README.md  compile-c-c++-to-wasm-wasi.md  compile-swift-to-wasm-wasi.md  getting-started.md
ecosystem/wasmer/: README.md  getting-started.md  usage.md  wasmer-features.md
example_rust_wasm_crates/: README.md
examples/rust/host-functions/: Cargo.toml
handling-errors/src/: main.rs
hello-world/: Cargo.toml
hello-world/src/: main.rs
hello_world/: Cargo.toml
host-functions/src/: main.rs
integrations/: ocaml.md  python.md  setup.md
integrations/c/: README.md  setup.md
integrations/examples/: calling-guest-functions.md  errors.md  exit-early.md  host-functions.md  imports-and-exports.md  instance.md  memory-pointers.md  memory.md  passing-data.md  using-exported-globals.md
integrations/go/: README.md  setup.md
integrations/javascript/: README.md  introduction.md  module-transformation.md  wasmer-js-cli.md  wasmer-js.md
integrations/js/: README.md  module-transformation.md  wasmer-js-cli.md
integrations/php/: README.md  setup.md
integrations/python/: README.md  setup.md
integrations/ruby/: README.md  setup.md
integrations/rust/: README.md  setup.md
integrations/rust/examples/early-exit/: Cargo.toml
integrations/rust/examples/early-exit/src/: main.rs
integrations/shared/: Makefile  add.wasm  early-exit.rs  handling-errors.wasm  host-functions.wasm
js/handling-input-output/: index.html  index.js
js/hello-world/: index.js  package-lock.json  package.json
js/transform-wasi-modules/: index.js  package-lock.json
passing-data/: Cargo.toml  strings_wasm_is_cool.wasm
passing-data/example-rust-wasm-crate/strings-wasm-is-cool/: Cargo.toml
passing-data/example-rust-wasm-crate/strings-wasm-is-cool/pkg/: package.json  strings_wasm_is_cool.d.ts  strings_wasm_is_cool.js  strings_wasm_is_cool_bg.d.ts  strings_wasm_is_cool_bg.wasm
passing-data/example-rust-wasm-crate/strings-wasm-is-cool/src/: lib.rs
passing-data/src/: main.rs
runtime-1/c-integration/: installation.md
runtime-1/rust-integration/: README.md
runtime-1/wasmer-js/: installation.md
rust/handling-errors/: Cargo.toml
rust/hello-world/: Cargo.toml
website/: package-lock.json  package.json  sidebars.json  siteConfig.js
website/core/: Footer.js
website/i18n/: en.json
website/static/: index.html
(+240 files in other folders)
