[package]
name = "passing-data"
version = "0.1.0"
authors = ["Aaron Turner <aaron@aaronthedev.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Add the wasmer-runtime as a dependency
wasmer-runtime = "0.9.0"
# Add the runtime core as a dependency for WasmPtr
wasmer-runtime-core = "0.9.0"
