[package]
name = "examples2"
version = "0.1.0"
authors = ["The Wasmer Engineering Team <engineering@wasmer.io>"]
edition = "2018"
publish = false

[dependencies]
wasmer-runtime = "0.13.1"

[workspace]
members = [
     "wasm/host-functions-guest",
     "wasm/hello-world-guest",
     "wasm/early-exit-guest",
     "wasm/handling-errors-guest",
     "wasm/passing-data-guest",
]

# TODO: update makefile to compile with z; cargo can't support the below
# [target.'cfg(target = "wasm32-unknown-unknown")'.profile.release]
# opt-level = "z"