[package]
name = "host-functions"
version = "0.1.0"
authors = ["Aaron Turner <aaron@aaronthedev.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Add the wasmer-runtime as a dependency
wasmer-runtime = "0.9.0"
