[package]
name = "exit-early"
version = "0.1.0"
authors = ["The Wasmer Engineering Team <engineering@wasmer.io>"]
edition = "2018"

[dependencies]
# The Wasmer API
wasmer = "1.0.0-alpha01.0"
# The Cranelift compiler used by the JIT engine
wasmer-compiler-cranelift = "1.0.0-alpha01.0"
# The engine we'll use in the API
wasmer-engine-jit = "1.0.0-alpha01.0"
